[package]
name = "deep-diff"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small crate to deeply diff serde_json::Value trees."
repository = "https://github.com/thePaulBurger/deep-diff"
readme = "README.md"
keywords = ["diff", "serde_json", "json"]
categories = ["data-structures", "text-processing"]
documentation = "https://docs.rs/deep-diff"

[dependencies]
serde_json = "1.0.143"
